--- a/Scraping/composer.json
+++ b/Scraping/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
-        "weidner/goutte": "^1.0"
+        "weidner/goutte": "^1.0",
+        "aws/aws-sdk-php-laravel": "~3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -25,7 +26,8 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Kyong\\Csv\\": "packages/Kyong/Csv/src"
         }
     },
     "autoload-dev": {
